# agent-kit

./: .env.template  .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md
examples/: basic_usage.py  hybrid_example.py
src/agents/: hybrid_agent.py  multi_server_agent.py
src/servers/: math_server.py  text_server.py  time_server.py
