[project]
name = "agent-kit"
version = "0.1.0"
description = "A flexible agent framework combining AISuite and MCP for powerful tool calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aisuite>=0.1.13",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "openai>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
